plugins/flutter/pocketpy/lib/pocketpy_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/pocketpy.h`.
///
/// Regenerate bindings with `flutter pub run ffigen --config ffigen.yaml`.
///
class PocketpyBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  PocketpyBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  PocketpyBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Initialize pocketpy and the default VM.
  void py_initialize() {
    return _py_initialize();
  }

  late final _py_initializePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('py_initialize');
  late final _py_initialize = _py_initializePtr.asFunction<void Function()>();

  /// Finalize pocketpy and free all VMs.
  void py_finalize() {
    return _py_finalize();
  }

  late final _py_finalizePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('py_finalize');
  late final _py_finalize = _py_finalizePtr.asFunction<void Function()>();

  /// Get the current VM index.
  int py_currentvm() {
    return _py_currentvm();
  }

  late final _py_currentvmPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('py_currentvm');
  late final _py_currentvm = _py_currentvmPtr.asFunction<int Function()>();

  /// Switch to a VM.
  /// @param index index of the VM ranging from 0 to 16 (exclusive). `0` is the default VM.
  void py_switchvm(
    int index,
  ) {
    return _py_switchvm(
      index,
    );
  }

  late final _py_switchvmPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>('py_switchvm');
  late final _py_switchvm = _py_switchvmPtr.asFunction<void Function(int)>();

  /// Reset the current VM.
  void py_resetvm() {
    return _py_resetvm();
  }

  late final _py_resetvmPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('py_resetvm');
  late final _py_resetvm = _py_resetvmPtr.asFunction<void Function()>();

  /// Get the current VM context. This is used for user-defined data.
  ffi.Pointer<ffi.Void> py_getvmctx() {
    return _py_getvmctx();
  }

  late final _py_getvmctxPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function()>>(
          'py_getvmctx');
  late final _py_getvmctx =
      _py_getvmctxPtr.asFunction<ffi.Pointer<ffi.Void> Function()>();

  /// Set the current VM context. This is used for user-defined data.
  void py_setvmctx(
    ffi.Pointer<ffi.Void> ctx,
  ) {
    return _py_setvmctx(
      ctx,
    );
  }

  late final _py_setvmctxPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'py_setvmctx');
  late final _py_setvmctx =
      _py_setvmctxPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Interrupt the current VM and raise a `KeyboardInterrupt` exception.
  void py_interrupt() {
    return _py_interrupt();
  }

  late final _py_interruptPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('py_interrupt');
  late final _py_interrupt = _py_interruptPtr.asFunction<void Function()>();

  /// Set `sys.argv`. Used for storing command-line arguments.
  void py_sys_setargv(
    int argc,
    ffi.Pointer<ffi.Pointer<ffi.Char>> argv,
  ) {
    return _py_sys_setargv(
      argc,
      argv,
    );
  }

  late final _py_sys_setargvPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('py_sys_setargv');
  late final _py_sys_setargv = _py_sys_setargvPtr
      .asFunction<void Function(int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// Setup the callbacks for the current VM.
  ffi.Pointer<py_Callbacks> py_callbacks() {
    return _py_callbacks();
  }

  late final _py_callbacksPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<py_Callbacks> Function()>>(
          'py_callbacks');
  late final _py_callbacks =
      _py_callbacksPtr.asFunction<ffi.Pointer<py_Callbacks> Function()>();

  /// Run a source string.
  /// @param source source string.
  /// @param filename filename (for error messages).
  /// @param mode compile mode. Use `EXEC_MODE` for statements `EVAL_MODE` for expressions.
  /// @param module target module. Use NULL for the main module.
  /// @return `true` if the execution is successful or `false` if an exception is raised.
  bool py_exec(
    ffi.Pointer<ffi.Char> source,
    ffi.Pointer<ffi.Char> filename,
    int mode,
    py_Ref module,
  ) {
    return _py_exec(
      source,
      filename,
      mode,
      module,
    );
  }

  late final _py_execPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int32, py_Ref)>>('py_exec');
  late final _py_exec = _py_execPtr.asFunction<
      bool Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, py_Ref)>();

  /// Evaluate a source string. Equivalent to `py_exec(source, "<string>", EVAL_MODE, module)`.
  bool py_eval(
    ffi.Pointer<ffi.Char> source,
    py_Ref module,
  ) {
    return _py_eval(
      source,
      module,
    );
  }

  late final _py_evalPtr = _lookup<
          ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>, py_Ref)>>(
      'py_eval');
  late final _py_eval =
      _py_evalPtr.asFunction<bool Function(ffi.Pointer<ffi.Char>, py_Ref)>();

  /// Run a source string with smart interpretation.
  /// Example:
  /// `py_newstr(py_r0(), "abc");`
  /// `py_newint(py_r1(), 123);`
  /// `py_smartexec("print(_0, _1)", NULL, py_r0(), py_r1());`
  /// `// "abc 123" will be printed`.
  bool py_smartexec(
    ffi.Pointer<ffi.Char> source,
    py_Ref module,
  ) {
    return _py_smartexec(
      source,
      module,
    );
  }

  late final _py_smartexecPtr = _lookup<
          ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>, py_Ref)>>(
      'py_smartexec');
  late final _py_smartexec = _py_smartexecPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Char>, py_Ref)>();

  /// Evaluate a source string with smart interpretation.
  /// Example:
  /// `py_newstr(py_r0(), "abc");`
  /// `py_smarteval("len(_)", NULL, py_r0());`
  /// `int res = py_toint(py_retval());`
  /// `// res will be 3`.
  bool py_smarteval(
    ffi.Pointer<ffi.Char> source,
    py_Ref module,
  ) {
    return _py_smarteval(
      source,
      module,
    );
  }

  late final _py_smartevalPtr = _lookup<
          ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>, py_Ref)>>(
      'py_smarteval');
  late final _py_smarteval = _py_smartevalPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Char>, py_Ref)>();

  /// Compile a source string into a code object.
  /// Use python's `exec()` or `eval()` to execute it.
  bool py_compile(
    ffi.Pointer<ffi.Char> source,
    ffi.Pointer<ffi.Char> filename,
    int mode,
    bool is_dynamic,
  ) {
    return _py_compile(
      source,
      filename,
      mode,
      is_dynamic,
    );
  }

  late final _py_compilePtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int32, ffi.Bool)>>('py_compile');
  late final _py_compile = _py_compilePtr.asFunction<
      bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, bool)>();

  /// Python equivalent to `globals()`.
  void py_newglobals(
    py_OutRef arg0,
  ) {
    return _py_newglobals(
      arg0,
    );
  }

  late final _py_newglobalsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_OutRef)>>(
          'py_newglobals');
  late final _py_newglobals =
      _py_newglobalsPtr.asFunction<void Function(py_OutRef)>();

  /// Python equivalent to `locals()`.
  /// @return a temporary object, which expires on the associated function return.
  void py_newlocals(
    py_OutRef arg0,
  ) {
    return _py_newlocals(
      arg0,
    );
  }

  late final _py_newlocalsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_OutRef)>>('py_newlocals');
  late final _py_newlocals =
      _py_newlocalsPtr.asFunction<void Function(py_OutRef)>();

  /// A shorthand for `True`.
  py_GlobalRef py_True() {
    return _py_True();
  }

  late final _py_TruePtr =
      _lookup<ffi.NativeFunction<py_GlobalRef Function()>>('py_True');
  late final _py_True = _py_TruePtr.asFunction<py_GlobalRef Function()>();

  /// A shorthand for `False`.
  py_GlobalRef py_False() {
    return _py_False();
  }

  late final _py_FalsePtr =
      _lookup<ffi.NativeFunction<py_GlobalRef Function()>>('py_False');
  late final _py_False = _py_FalsePtr.asFunction<py_GlobalRef Function()>();

  /// A shorthand for `None`.
  py_GlobalRef py_None() {
    return _py_None();
  }

  late final _py_NonePtr =
      _lookup<ffi.NativeFunction<py_GlobalRef Function()>>('py_None');
  late final _py_None = _py_NonePtr.asFunction<py_GlobalRef Function()>();

  /// A shorthand for `nil`. `nil` is not a valid python object.
  py_GlobalRef py_NIL() {
    return _py_NIL();
  }

  late final _py_NILPtr =
      _lookup<ffi.NativeFunction<py_GlobalRef Function()>>('py_NIL');
  late final _py_NIL = _py_NILPtr.asFunction<py_GlobalRef Function()>();

  /// Create an `int` object.
  void py_newint(
    py_OutRef arg0,
    int arg1,
  ) {
    return _py_newint(
      arg0,
      arg1,
    );
  }

  late final _py_newintPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_OutRef, py_i64)>>(
          'py_newint');
  late final _py_newint =
      _py_newintPtr.asFunction<void Function(py_OutRef, int)>();

  /// Create a `float` object.
  void py_newfloat(
    py_OutRef arg0,
    double arg1,
  ) {
    return _py_newfloat(
      arg0,
      arg1,
    );
  }

  late final _py_newfloatPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_OutRef, py_f64)>>(
          'py_newfloat');
  late final _py_newfloat =
      _py_newfloatPtr.asFunction<void Function(py_OutRef, double)>();

  /// Create a `bool` object.
  void py_newbool(
    py_OutRef arg0,
    bool arg1,
  ) {
    return _py_newbool(
      arg0,
      arg1,
    );
  }

  late final _py_newboolPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_OutRef, ffi.Bool)>>(
          'py_newbool');
  late final _py_newbool =
      _py_newboolPtr.asFunction<void Function(py_OutRef, bool)>();

  /// Create a `str` object from a null-terminated string (utf-8).
  void py_newstr(
    py_OutRef arg0,
    ffi.Pointer<ffi.Char> arg1,
  ) {
    return _py_newstr(
      arg0,
      arg1,
    );
  }

  late final _py_newstrPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(py_OutRef, ffi.Pointer<ffi.Char>)>>('py_newstr');
  late final _py_newstr = _py_newstrPtr
      .asFunction<void Function(py_OutRef, ffi.Pointer<ffi.Char>)>();

  /// Create a `str` object with `n` UNINITIALIZED bytes plus `'\0'`.
  ffi.Pointer<ffi.Char> py_newstrn(
    py_OutRef arg0,
    int arg1,
  ) {
    return _py_newstrn(
      arg0,
      arg1,
    );
  }

  late final _py_newstrnPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(py_OutRef, ffi.Int)>>('py_newstrn');
  late final _py_newstrn = _py_newstrnPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(py_OutRef, int)>();

  /// Create a `str` object from a `c11_sv`.
  void py_newstrv(
    py_OutRef arg0,
    c11_sv arg1,
  ) {
    return _py_newstrv(
      arg0,
      arg1,
    );
  }

  late final _py_newstrvPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_OutRef, c11_sv)>>(
          'py_newstrv');
  late final _py_newstrv =
      _py_newstrvPtr.asFunction<void Function(py_OutRef, c11_sv)>();
